# Jefferson_hackathon

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  pyproject.toml.bak  specs.md  test_persona_generation.py  test_precinct_configs.py  test_simulation.py  test_survey_parser.py
data/config/: precincts_miami.json  precincts_sf.json
data/surveys/TOP Dec 2025/: FAVOR04_codebook_supplement (1).xlsx
src/: __init__.py  cli.py
src/api/: __init__.py  main.py
src/flows/: __init__.py  ingestion.py  simulation.py
src/models/: __init__.py  persona.py
src/tasks/: __init__.py  database.py  llm.py  llm.py.backup  news.py
src/utils/: persona_generator.py  survey_parser.py
tests/: test_cli_mock.py
